--- a/hello.html
+++ b/hello.html
@@ -3,9 +3,120 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
 
-    <title>Am I HTML already?</title>
+    <title>Slider</title>
 </head>
 <body>
-    <h1> Hello</h1>
+    <div id="screenshots" class="section wb">
+        <div class="container">
+            <div class="section-title text-center">
+                <h3>Screenshots of the App</h3>
+                <p class="lead">Lorem Ipsum dolroin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum<br>auctor nisi elit consequat ipsum, nec sagittis sem!</p>
+            </div><!-- end title -->
+
+            <div class="owl-screenshots swiper-container">
+				<div class="mobilescreen-image"></div>
+				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+						<div class="service-widget">
+							<div class="post-media entry wow fadeIn">
+								<a href="uploads/screenshot_01.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+								<img src="uploads/screenshot_01.png" alt="" class="img-fluid img-rounded">
+								<div class="magnifier"></div>
+							</div>
+						</div><!-- end service -->
+					</div>
+					<div class="swiper-slide">
+						<div class="service-widget">
+							<div class="post-media entry wow fadeIn">
+								<a href="uploads/screenshot_02.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+								<img src="uploads/screenshot_02.png" alt="" class="img-fluid img-rounded">
+								<div class="magnifier"></div>
+							</div>
+						</div><!-- end service -->
+					</div>
+					<div class="swiper-slide">
+						<div class="service-widget">
+							<div class="post-media entry wow fadeIn">
+								<a href="uploads/screenshot_03.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+								<img src="uploads/screenshot_03.png" alt="" class="img-fluid img-rounded">
+								<div class="magnifier"></div>
+							</div>
+						</div><!-- end service -->
+					</div>
+					<div class="swiper-slide">
+						<div class="service-widget">
+							<div class="post-media entry wow fadeIn">
+								<a href="uploads/screenshot_04.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+								<img src="uploads/screenshot_04.png" alt="" class="img-fluid img-rounded">
+								<div class="magnifier"></div>
+							</div>
+						</div><!-- end service -->
+					</div>
+					<div class="swiper-slide">
+						<div class="service-widget">
+							<div class="post-media entry wow fadeIn">
+								<a href="uploads/screenshot_05.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+								<img src="uploads/screenshot_05.png" alt="" class="img-fluid img-rounded">
+								<div class="magnifier"></div>
+							</div>
+						</div><!-- end service -->
+					</div>
+					<div class="swiper-slide">
+						<div class="service-widget">
+							<div class="post-media entry wow fadeIn">
+								<a href="uploads/screenshot_06.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+								<img src="uploads/screenshot_06.png" alt="" class="img-fluid img-rounded">
+								<div class="magnifier"></div>
+							</div>
+						</div><!-- end service -->
+					</div>
+					<div class="swiper-slide">
+						<div class="service-widget">
+							<div class="post-media entry wow fadeIn">
+								<a href="uploads/screenshot_01.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+								<img src="uploads/screenshot_01.png" alt="" class="img-fluid img-rounded">
+								<div class="magnifier"></div>
+							</div>
+						</div><!-- end service -->
+					</div>
+					<div class="swiper-slide">
+						<div class="service-widget">
+							<div class="post-media entry wow fadeIn">
+								<a href="uploads/screenshot_02.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+								<img src="uploads/screenshot_02.png" alt="" class="img-fluid img-rounded">
+								<div class="magnifier"></div>
+							</div>
+						</div><!-- end service -->
+					</div>
+					<div class="swiper-slide">
+						<div class="service-widget">
+							<div class="post-media entry wow fadeIn">
+								<a href="uploads/screenshot_03.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+								<img src="uploads/screenshot_03.png" alt="" class="img-fluid img-rounded">
+								<div class="magnifier"></div>
+							</div>
+						</div><!-- end service -->
+					</div>
+					<div class="swiper-slide">
+						<div class="service-widget">
+							<div class="post-media entry wow fadeIn">
+								<a href="uploads/screenshot_04.png" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
+								<img src="uploads/screenshot_04.png" alt="" class="img-fluid img-rounded">
+								<div class="magnifier"></div>
+							</div>
+						</div><!-- end service -->
+					</div>
+				</div>
+                <div class="swiper-pagination"></div>
+				<div class="swiper-button-next">
+					<i class="fa fa-angle-right" aria-hidden="true"></i>
+				</div>
+				<div class="swiper-button-prev">
+					<i class="fa fa-angle-left" aria-hidden="true"></i>
+				</div>
+            </div><!-- end row -->			
+        </div><!-- end container -->
+    </div><!-- end section -->
+
 </body>
 
