--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    
+    <!--SWiper CSS-->
+    <link rel="stylesheet" href="css/swiper.min.css">
     <title>Slider</title>
 </head>
 <body>
