--- a/hello.html
+++ b/hello.html
@@ -16,7 +16,7 @@
                 <p class="lead">Lorem Ipsum dolroin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum<br>auctor nisi elit consequat ipsum, nec sagittis sem!</p>
             </div><!-- end title -->
 
-            <div class="owl-screenshots swiper-container">
+            <div class="swiper-container">
 				<div class="mobilescreen-image"></div>
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
