--- a/hello.html
+++ b/hello.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -16,7 +17,7 @@
                 <p class="lead">Lorem Ipsum dolroin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum<br>auctor nisi elit consequat ipsum, nec sagittis sem!</p>
             </div><!-- end title -->
 
-            <div class="swiper-container">
+            <div class="swiper">
 				<div class="mobilescreen-image"></div>
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
