--- a/swiper.html
+++ b/swiper.html
@@ -67,5 +67,6 @@
   <div class="carousel-cell"><img class="screen" src="https://i.ibb.co/BGqc6sY/completed-no-frame-2.png"></div>
   <div class="carousel-cell"><img class="screen" src="https://i.ibb.co/BGqc6sY/completed-no-frame-2.png"></div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/flickity/2.2.1/flickity.pkgd.min.js"></script>
     </body>
 </html>
