--- a/swiper.html
+++ b/swiper.html
@@ -2,6 +2,7 @@
 
 <html>
     <head>
+        <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
             .carousel {
