--- a/swiper.html
+++ b/swiper.html
@@ -58,6 +58,7 @@
             }
         </style>
         <title> Swipe</title>
+        <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     </head>
     <body>
         <div class="carousel"
