--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,9 @@
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
         
     </head>
-    <body>
+    <body data->
+        <!--Android Projects-->
+        <!--Project 1-->
         <div class="carousel"
   data-flickity='{ "wrapAround": true }'>
   <div class="carousel-cell"><img class="screen" src="https://i.ibb.co/BGqc6sY/completed-no-frame-2.png"></div>
@@ -20,6 +22,8 @@
   <div class="carousel-cell"><img class="screen" src="https://i.ibb.co/BGqc6sY/completed-no-frame-2.png"></div>
   <div class="carousel-cell"><img class="screen" src="https://i.ibb.co/BGqc6sY/completed-no-frame-2.png"></div>
 </div>
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flickity/2.2.1/flickity.pkgd.min.js"></script>
     </body>
 </html>
