--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <h1>Kate Murray </h1>
   <br/>
-  <div class="col item social"><a id="linkedin" aria-label="LinkedIn"><i class="icon ion-social-linkedin"></i></a><a id="github" aria-label="GitHub"><i class="icon ion-social-github"></i></a><a id="email" aria-label="Email"><i class="icon ion-email"></i></a> </div>
+  <div class="col item social"><a class="linkedin" aria-label="LinkedIn"><i class="icon ion-social-linkedin"></i></a><a class="github" aria-label="GitHub"><i class="icon ion-social-github"></i></a><a class="email" aria-label="Email"><i class="icon ion-email"></i></a> </div>
 
 </div>
   <!--Waves Container-->
@@ -118,7 +118,7 @@
                 <div class="row">
                    <div class="col-md-6 item text">
                         <h2>Kate Murray</h2>
-                         <div class="col item social"><a id="linkedin" aria-label="LinkedIn"><i class="icon ion-social-linkedin"></i></a><a id="github" aria-label="GitHub"><i class="icon ion-social-github"></i></a><a id="email" aria-label="Email"><i class="icon ion-email"></i></a> </div>
+                         <div class="col item social"><a class="linkedin" aria-label="LinkedIn"><i class="icon ion-social-linkedin"></i></a><a class="github" aria-label="GitHub"><i class="icon ion-social-github"></i></a><a class="email" aria-label="Email"><i class="icon ion-email"></i></a> </div>
                     </div>
                     <div class="col-sm-6 col-md-3 item">
                         
