--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   
   <title>Kate Murray</title>
+  <link rel="icon" href="/images/kM.png">
 </head>
 
 <body class="app_version" data-spy="scroll" data-target="#navbarApp" data-offset="98">
@@ -29,6 +30,9 @@
 <div class ="container">
   <div class="row">
 <h1>Kate Murray </h1>
+  </div>
+  <div class="row">
+    <h2 class="subtitle">Mobile Developer</h2>
   </div>
   <div class = "row">
   <div class="col item social"><a id="header_linkedin" aria-label="LinkedIn"><i class="icon ion-social-linkedin"></i></a><a id="header_github" aria-label="GitHub"><i class="icon ion-social-github"></i></a><a id="header_email" aria-label="Email"><i class="icon ion-email"></i></a> </div>
@@ -60,8 +64,10 @@
   <!-- ABOUT -->
   
   <div id="about">
+       <div class="container">
+         <div class ="row">
     <h1>About</h1>
-    <div class="container">
+         </div>
       <div class ="row">
         <div class= "col-8">
           <img src ="https://www.qries.com/images/banner_logo.png" class = "about"/>
@@ -70,29 +76,32 @@
           <p> Details</p>
         </div>
       </div>
+    <hr>
     </div>
+ 
   </div>
-  <hr>
+
   <div id="projects">
-    <h1> Recent Projects</h1>
+      <div class="container">
+        <div class ="row">
+     <h1> Recent Projects</h1>
+      </div>
             <!--Android Projects-->
         <!--Project 1-->
-    <div class="container">
+  
   <div class="row">
     <div class="col-8">
       <div class="carousel"
   data-flickity='{ "wrapAround": true }'>
-   <div class="carousel-cell"><img class="screen" src="https://i.ibb.co/BGqc6sY/completed-no-frame-2.png"></div>
-  <div class="carousel-cell"><img class="screen" src="https://i.ibb.co/BGqc6sY/completed-no-frame-2.png"></div>
-  <div class="carousel-cell"><img class="screen" src="https://i.ibb.co/BGqc6sY/completed-no-frame-2.png"></div>
-  <div class="carousel-cell"><img class="screen" src="https://i.ibb.co/BGqc6sY/completed-no-frame-2.png"></div>
-  <div class="carousel-cell"><img class="screen" src="https://i.ibb.co/BGqc6sY/completed-no-frame-2.png"></div>
+   <div class="carousel-cell"><img class="screen" id= "proj_0_img_0"></div>
+  <div class="carousel-cell"><img class="screen" id = "proj_0_img_1"></div>
+ 
 </div>
     </div>
     <div class="col">
-      <h3> Name of Project </h3>
-      <p>  Information about it</p>
-       <button class ="source-code" onclick="window.location.href='https://w3docs.com';">
+      <h3 id='proj_0_name'></h3>
+      <p id='proj_0_detail'> Information about it</p>
+       <button class ="source-code" id ="proj_0_url">
       Source Code
     </button>
     </div>
@@ -153,7 +162,7 @@
  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <script src= "js/details.js"></script>
+  <script src= "js/details.js" type ='module'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flickity/2.2.1/flickity.pkgd.min.js"></script>
 </body>
 
