add more projects

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
       <div class="row">
         <h2>Hello! I am Kate Murray.</h2>
-        <p id="bio"> Details</p>
+        <p id="bio"></p>
         <h3>Things I have used in development</h3>
       </div>
       <div class="row">
