--- a/index.html
+++ b/index.html
@@ -79,12 +79,13 @@
       <div class="row">
         <h2>Hello! I am Kate Murray.</h2>
         <p id="bio"></p>
+         <p id="extra"> <a href="https://www.mdpi.com/2100672"> On
+            Forecasting Cryptocurrency Prices: A Comparison of Machine Learning, Deep Learning, and Ensembles </a></p>
         <h3>Things I have used in development</h3>
       </div>
       <div class="row">
         <p id="tech"> </p>
-        <p id="extra"> I was also involved in the following research: <a href="https://www.mdpi.com/2100672"> On
-            Forecasting Cryptocurrency Prices: A Comparison of Machine Learning, Deep Learning, and Ensembles </a></p>
+       
       </div>
       <hr>
     </div>
@@ -100,12 +101,15 @@
       <!--Project 1-->
 
       <div class="row">
-        <div class="col-6">
+        <div class="col-8">
           <div class="carousel" data-flickity='{ "wrapAround": true }'>
             <div class="carousel-cell"><img class="screen" id="proj_0_img_0"></div>
             <div class="carousel-cell"><img class="screen" id="proj_0_img_1"></div>
-<div class="carousel-cell"><img class="screen" id="proj_0_img_2"></div>
-
+            <div class="carousel-cell"><img class="screen" id="proj_0_img_2"></div>
+            <div class="carousel-cell"><img class="screen" id="proj_0_img_3"></div>
+            <div class="carousel-cell"><img class="screen" id="proj_0_img_4"></div>
+            <div class="carousel-cell"><img class="screen" id="proj_0_img_5"></div>
+          <div class="carousel-cell"><img class="screen" id="proj_0_img_6"></div>
           </div>
         </div>
         <div class="col">
@@ -135,15 +139,12 @@
           </button>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-8">
           <div class="carousel" data-flickity='{ "wrapAround": true }'>
             <div class="carousel-cell"><img class="screen" id="proj_1_img_0"></div>
             <div class="carousel-cell"><img class="screen" id="proj_1_img_1"></div>
             <div class="carousel-cell"><img class="screen" id="proj_1_img_2"></div>
-               <div class="carousel-cell"><img class="screen" id="proj_1_img_3"></div>
-               <div class="carousel-cell"><img class="screen" id="proj_1_img_4"></div>
-               <div class="carousel-cell"><img class="screen" id="proj_1_img_5"></div>
-               <div class="carousel-cell"><img class="screen" id="proj_1_img_6"></div>
+
 
           </div>
         </div>
@@ -153,7 +154,7 @@
       <hr>
     <!--Project 3-->
     <div class="row">
-      <div class="col-6">
+      <div class="col-8">
         <div class="carousel" data-flickity='{ "wrapAround": true }'>
           <div class="carousel-cell"><img class="screen" id="proj_2_img_0"></div>
           <div class="carousel-cell"><img class="screen" id="proj_2_img_1"></div>
@@ -191,7 +192,7 @@
           </button>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-8">
           <div class="carousel" data-flickity='{ "wrapAround": true }'>
             <div class="carousel-cell"><img class="screen" id="proj_3_img_0"></div>
             <div class="carousel-cell"><img class="screen" id="proj_3_img_1"></div>
@@ -219,7 +220,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6 item text">
-              <h2>Kate Murray</h2>
+              <h2 class="name">Kate Murray</h2>
               <div class="col item social"><a id="footer_linkedin" aria-label="LinkedIn" aria-hidden="false"><i
                     class="icon ion-social-linkedin"></i></a><a id="footer_github" aria-label="GitHub" aria-hidden="false"><i
                     class="icon ion-social-github"></i></a><a id="footer_email" aria-label="Email" aria-hidden="false"><i
